# rustic_portfolio

./: .gitignore  Cargo.toml  README.md  fix.sh  fix.sh~  index.html  main.css  vercel.json
.github/workflows/: vercel.yml
public/: robots.txt
src/: lib.rs
src/app/: lib.rs
src/components/: mod.rs  nav.rs  project_card.rs  skills.rs  terminal.rs
src/data/: mod.rs
src/pages/: contact.rs  home.rs  iot.rs  mod.rs  not_found.rs  projects.rs
